
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
char* find_bytes(char* haystack, int haystack_length, char* needle, int needle_length) {
 int needle_start = -1, needle_checked = 1;
 do {
  if (haystack[needle_start+needle_checked] == needle[needle_checked])

   needle_checked++;
  else {

   needle_start++;
   needle_checked = 0;
  }
  if (needle_start + needle_length > haystack_length)

   return 0;
 } while (needle_checked != needle_length);

 return haystack + needle_start;
}
